--- a/CVPRTest/CVPRTest/CVPRTest.csproj
+++ b/CVPRTest/CVPRTest/CVPRTest.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Helpers\RealmHelper.cs" />
     <Compile Include="ViewModels\FindViewModel.cs" />
+    <Compile Include="ViewModels\MainAppViewModel.cs" />
     <Compile Include="ViewModels\TranslationViewModel.cs" />
     <Compile Include="ViewModels\VisitorListViewModel.cs" />
     <Compile Include="ViewModels\VisitorViewModel.cs" />
@@ -59,6 +60,9 @@
     </Compile>
     <Compile Include="Views\LoginPage.xaml.cs">
       <DependentUpon>LoginPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\MainAppPage.xaml.cs">
+      <DependentUpon>MainAppPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\TranslationsPage.xaml.cs">
       <DependentUpon>TranslationsPage.xaml</DependentUpon>
@@ -155,6 +159,12 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Views\TranslationsPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Views\MainAppPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
       <SubType>Designer</SubType>
     </EmbeddedResource>
